# ws2812-clock

./: .gitmodules  README.md
.github/workflows/: CI.yml
3dprinting/: README.md
3dprinting/v22/: Lower Case Left.stl  Lower Case Right.stl  Upper Case Left.stl  Upper Case Right.stl
firmware/: .gitignore  CMakeLists.txt  export.sh  partitions.csv
firmware/configs/: config_bme280.cmake  sdkconfig_bme280
firmware/main/: CMakeLists.txt  main.cpp
firmware/main/communication/: mdns_clock.cpp  mdns_clock.h  mqtt.cpp  mqtt.h  ota.cpp  ota.h  webserver.cpp  webserver.h  webserver_api.cpp  webserver_api.h  webserver_frontend.cpp  webserver_frontend.h  wifi.cpp  wifi.h
firmware/main/communication/helper/: configapihelper.cpp  configapihelper.h  fromJson.h  saveSetting.h  status.cpp  status.h  toJson.h
firmware/main/peripheral/: basicleds.cpp  basicleds.h  beeper.cpp  beeper.h  bme280.cpp  bme280.h  ledmanager.cpp  ledmanager.h
firmware/main/peripheral/ledhelpers/: clockdot.cpp  clockdot.h  digit.cpp  digit.h  digithelper.cpp  digithelper.h  ledanimation.cpp  ledanimation.h
firmware/main/peripheral/ledhelpers/animations/: newyearanimation.cpp  newyearanimation.h  rainbowanimation.cpp  rainbowanimation.h  randomcoloranimation.cpp  randomcoloranimation.h  staticcoloranimation.cpp  staticcoloranimation.h  stroboanimation.cpp  stroboanimation.h
firmware/main/peripheral/ledhelpers/animations/internal/: otaanimation.cpp  otaanimation.h
firmware/main/utils/: config.cpp  config.h  configutils_clock.h  configwrapper_clock.cpp  espclock.cpp  espclock.h  global_lock.cpp  global_lock.h  tasks.cpp  tasks.h  typehelpers.h
firmware/tools/: app-flash  clear-ota-data  clear-ota-data-flasher  (+2 more)
hardware/: .gitignore  fp-lib-table  leds.kicad_sch  sym-lib-table  usb_c.kicad_sch  ws2812-clock.kicad_pro  ws2812-clock.kicad_sch
(+24 files in other folders)
